Fixed arrows position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ button.transparent-button {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-    top: 10px;
+    top: 11px;
   }
   
   /* Position the "next button" to the right */
